--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
     "name": "simple-template-mailer",
-    "version": "0.0.6",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RAPIDFACTURE/simple-template-mailer.git"
+    },
+    "bugs": {
+        "url": "https://github.com/rapidfacture/simple-template-mailer/issues"
+    },
+    "homepage": "https://github.com/rapidfacture/simple-template-mailer#readme",
+    "version": "0.0.7",
     "description": "Simple manage templates and translations, bulid and send mails. For medium projects.",
     "author": "Felix Furtmayr",
     "license": "ISC",
