--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "license": "ISC",
     "main": "index.js",
     "dependencies": {
-        "mustache": "^2.2.1",
+        "mustache": "2.2.1",
         "nodemailer": "2.7.2",
         "inline-source": "5.2.0"
     },
