--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "mustache": "2.3.0",
     "nodemailer": "4.6.7",
-    "inline-source": "6.1.5",
+    "inline-source": "5.2.0"
     "html-to-text": "4.0.0"
   },
   "keywords": [
